remove chewy.com

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -784,6 +784,7 @@ button.btn_load_more {
 }
 .ant-collapse-content > .ant-collapse-content-box p {
   text-align: justify;
+  font-size: 1.2em;
 }
 
 .footer {
